Why GPU slow if cores many?

--- a/source/boltzmann_fluid_sim/boltzmann_fluid_sim.vcxproj
+++ b/source/boltzmann_fluid_sim/boltzmann_fluid_sim.vcxproj
@@ -87,14 +87,16 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="bKernels.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bSimulator.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bKernels.h" />
     <ClInclude Include="bSimulator.h" />
+    <ClInclude Include="bKernels.cuh" />
     <ClInclude Include="shaderHelper.h" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
