GPU rendering but still slow

--- a/source/boltzmann_fluid_sim/boltzmann_fluid_sim.vcxproj
+++ b/source/boltzmann_fluid_sim/boltzmann_fluid_sim.vcxproj
@@ -97,6 +97,8 @@
     <ClInclude Include="bKernels.h" />
     <ClInclude Include="bSimulator.h" />
     <ClInclude Include="bKernels.cuh" />
+    <ClInclude Include="exception.h" />
+    <ClInclude Include="helper_timer.h" />
     <ClInclude Include="shaderHelper.h" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
