--- a/source/boltzmann_fluid_sim/imgui.ini
+++ b/source/boltzmann_fluid_sim/imgui.ini
@@ -9,7 +9,17 @@ Size=550,680
 Collapsed=0
 
 [Window][Stats]
-Pos=192,25
-Size=438,78
+Pos=1134,682
+Size=457,88
+Collapsed=0
+
+[Window][Simulator]
+Pos=1293,120
+Size=603,488
+Collapsed=0
+
+[Window][New Simulation]
+Pos=1055,185
+Size=346,155
 Collapsed=0
 
